<resources>
    <string name="app_name">QuickBeer</string>
    <string name="action_settings">Settings</string>
    <string name="action_ok">OK</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="copied_to_clipboard">Copied</string>
    <string name="recent_title">Search</string>
    <string name="recent_description">Search</string>
    <string name="barcode_scanner_title">Scanner</string>
    <string name="barcode_scanner_description">Barcode scanner</string>
    <string name="discover_title">Discover</string>
    <string name="discover_description">Discover</string>
    <string name="profile_title">Profile</string>
    <string name="profile_description">Profile</string>
    <string name="details_title">Details</string>
    <string name="rating_title">Rating</string>
    <string name="login_title">Login</string>
    <string name="legal_title">Legal</string>
    <string name="ratings_list_title">Rated Beers</string>
    <string name="ticks_list_title">Ticked Beers</string>
    <string name="open_source_title">Open Source Licenses</string>
    <string name="graphics_assets_title">Graphics Asset Licenses</string>
    <string name="quickbeer_license_title">QuickBeer License</string>
    <string name="quickbeer_privacy_policy_title">QuickBeer Privacy Policy</string>
    <string name="actions_title">Actions</string>
    <string name="search_hint">Search…</string>
    <string name="search_initial">Enter keywords.</string>
    <string name="search_min_length">Query needs to be at least four characters.</string>
    <string name="search_progress">Searching…</string>
    <string name="search_tab_beers">Beers</string>
    <string name="search_tab_brewers">Brewers</string>
    <string name="search_tab_places">Places</string>
    <string name="recent_beers">Beers</string>
    <string name="recent_brewers">Brewers</string>
    <string name="recent_places">Places</string>
    <string name="message_start">Welcome to QuickBeer!\n\nStart by searching for your favourite beer or cider.\n\nCheers!</string>
    <string name="message_empty">No results.</string>
    <string name="message_error">Error! Try again later.</string>
    <string name="not_yet_rated">You have not yet rated this one.</string>
    <string name="add_rating">Add rating</string>
    <string name="edit_rating">Edit rating</string>
    <string name="delete_rating">Delete rating</string>
    <string name="edit_draft">Edit draft</string>
    <string name="delete_draft">Delete draft</string>
    <string name="delete_draft_message">Are you sure you want to delete this draft?</string>
    <string name="delete_rating_message">Are you sure you want to delete this rating?</string>
    <string name="percentile_rating">Rating</string>
    <string name="percentile_overall">Overall</string>
    <string name="percentile_style">Style</string>
    <string name="beer_details_ratings">Ratings</string>
    <string name="beer_details_no_photo">No photo available for this beer</string>
    <string name="no_description">No description available.</string>
    <string name="not_available">N/A</string>
    <string name="not_enough_ratings">Requires more ratings before score can be shown</string>
    <string name="brewer">Brewer</string>
    <string name="origin">Origin</string>
    <string name="style">Beer style</string>
    <string name="abv">ABV</string>
    <string name="ibu">IBU</string>
    <string name="description_rating_overall">Beer’s rating relative to all beers on a scale from 0 to 100</string>
    <string name="description_rating_style">Beer’s rating relative to beers in the same style category on a scale from 0 to 100</string>
    <string name="description_abv">Alcohol by volume</string>
    <string name="description_ibu">International Bittering Units, a measure of beer bitterness</string>
    <string name="founded">Founded</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="brewer_details_no_photo">No photo available for this brewer</string>
    <string name="brewer_details_no_website">No website available</string>
    <string name="brewer_details_no_facebook">Facebook page not available</string>
    <string name="brewer_details_no_twitter">Twitter feed not available</string>
    <string name="place_type">Type</string>
    <string name="place_brewer">Associated brewer</string>
    <string name="place_country">Country</string>
    <string name="place_city">City</string>
    <string name="place_address">Address</string>
    <string name="place_opening_hours">Opening Hours</string>
    <string name="place_beer_menu">Beer Menu</string>
    <string name="place_food_menu">Food Menu</string>
    <string name="place_rating">Rating relative to all places on a scale from 0 to 100</string>
    <string name="place_type_unknown">Unknown</string>
    <string name="place_type_brewpub">Brewpub</string>
    <string name="place_type_bar">Bar</string>
    <string name="place_type_beer_store">Beer store</string>
    <string name="place_type_restaurant">Restaurant</string>
    <string name="place_type_brewery">Brewery</string>
    <string name="place_type_homebrew_shop">Homebrew Shop</string>
    <string name="place_type_grocery_store">Grocery Store</string>
    <string name="place_type_internet_based">Internet Based</string>
    <string name="style_details_description">Description</string>
    <string name="style_details_parent">Parent Category</string>
    <string name="country_official_name">Official Name</string>
    <string name="country_region">Region</string>
    <string name="country_capital">Capital</string>
    <string name="country_beer_culture">Beer Culture</string>
    <string name="country_read_more">Read more</string>
    <string name="country_wikipedia_note">Includes material from Wikipedia under the CC BY-SA 3.0 license.</string>
    <string name="beer_tick_date">You ticked this beer on %1$s at %2$s</string>
    <string name="tick_success">%s ticked</string>
    <string name="tick_removed">Tick removed</string>
    <string name="tick_failure">Ticking failed. Try again later.</string>
    <string name="tick_explanation">Ticks are your private notes and do not affect the public score or rank.</string>
    <string name="login_dialog_title">Login required</string>
    <string name="login_to_rate_message">You need to login to rate beers. Login now?</string>
    <string name="login_to_view_ratings_message">You need to login to view your ratings. Login now?</string>
    <string name="rating_appearance">Appearance</string>
    <string name="rating_appearance_short">Appear.</string>
    <string name="rating_aroma">Aroma</string>
    <string name="rating_flavor">Flavor</string>
    <string name="rating_mouthfeel">Mouthfeel</string>
    <string name="rating_mouthfeel_short">Mouthf.</string>
    <string name="rating_overall">Overall</string>
    <string name="rating_description">Comments</string>
    <string name="rating_draft">Draft</string>
    <string name="rating_draft_explanation">Unfinished rating, stored only within the app.</string>
    <string name="rating_private">Private rating</string>
    <string name="rating_private_explanation">Does not contribute to the public score.</string>
    <string name="rating_description_length">Min length: %s / %s</string>
    <string name="rating_appearance_hint">Visual appeal, including the colour, clarity, carbonation, and head size and longevity.</string>
    <string name="rating_aroma_hint">Hop character, malts, sweetness, fruitiness and other aromas.</string>
    <string name="rating_flavor_hint">How the beer tastes. How does the initial flavour vary from the start, the middle, finish and aftertaste of the beer?</string>
    <string name="rating_mouthfeel_hint">The “feel” of the beer inside your mouth and as you swallow it.</string>
    <string name="rating_overall_hint">Overall rating of the beer. When you finish the beer, how do you feel about it?</string>
    <string name="rating_list_empty">This beer isn’t rated yet.</string>
    <string name="rating_list_error">Error! Try again later.</string>
    <string name="rating_action_login">Log in to rate</string>
    <string name="rating_action_rate">Rate</string>
    <string name="rating_action_tick">Tick</string>
    <string name="rating_action_publish">Publish</string>
    <string name="rating_action_draft">Save draft</string>
    <string name="rating_publish_success">Published successfully</string>
    <string name="rating_publish_error">Error publishing. Try again later.</string>
    <string name="rating_draft_success">Saved as in-app draft</string>
    <string name="cd_close_button">Back</string>
    <string name="cd_flash_button">Toggle camera flash</string>
    <string name="permission_explanation">Camera is needed for barcode scanning. Grant permission to use the camera?</string>
    <string name="permission_missing">Barcode scanner cannot run because it does not have the camera permission.</string>
    <string name="prompt_loading_camera">Loading camera...</string>
    <string name="prompt_point_at_a_barcode">Point your camera at a barcode</string>
    <string name="prompt_move_camera_closer">Move closer to search</string>
    <string name="prompt_searching">Searching&#8230;</string>
    <string name="prompt_no_results">No beers found for %s</string>
    <string name="prompt_error">Error searching for %s</string>
    <string name="discover_top_beers">Highest Rated Beers</string>
    <string name="discover_countries">All Countries</string>
    <string name="discover_styles">All Styles</string>
    <string name="feed_friends">Friends Feed</string>
    <string name="feed_local">Local Feed</string>
    <string name="feed_global">Global Feed</string>
    <string name="feed_friends_error">No results. Are you following anyone?</string>
    <string name="login_username_hint">Username</string>
    <string name="login_username_label">Username</string>
    <string name="login_password_hint">Password</string>
    <string name="login_password_label">Password</string>
    <string name="login_button_label">Login</string>
    <string name="login_error_field_required">This field is required</string>
    <string name="login_failed">Login failed. Check your username and password.</string>
    <string name="login_error">Error logging in. Please try again later.</string>
    <string name="login_success">Logged in successfully</string>
    <string name="profile_loading_profile">Loading…</string>
    <string name="profile_loading_ratings">loading…</string>
    <string name="profile_ratings">Ratings: %s</string>
    <string name="profile_ticks">Ticks: %s</string>
    <string name="profile_login">Login</string>
    <string name="profile_logout">Logout</string>
    <string name="profile_not_logged">Not logged in</string>
    <string name="license_link">Link: %s</string>
    <string name="about">About</string>
    <string name="about_description">QuickBeer is an open source app made with lots of love and scarce free time. Consider reviewing it on Google Play if you like the app. Thanks!</string>
    <string name="about_google_play">QuickBeer on Google Play</string>
    <string name="about_legal">Privacy &amp; Legal Notices</string>
    <string name="about_open_source_licenses">Open Source Licenses</string>
    <string name="about_graphic_asset_licenses">Graphics Asset Licenses</string>
    <string name="about_privacy_policy">QuickBeer Privacy Policy</string>
    <string name="about_source_code">QuickBeer Source Code</string>
    <string name="about_quickbeer_license">QuickBeer License</string>
    <string name="about_version">Version %s</string>
</resources>