<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search"
        android:contentDescription="@string/recent_description"
        android:title="@string/recent_title" />

    <item
        android:id="@+id/barcode"
        android:icon="@drawable/ic_action_barcode"
        android:contentDescription="@string/barcode_scanner_description"
        android:title="@string/barcode_scanner_title" />

    <item
        android:id="@+id/discover"
        android:icon="@drawable/ic_action_discover"
        android:contentDescription="@string/discover_description"
        android:title="@string/discover_title" />

    <item
        android:id="@+id/more"
        android:icon="@drawable/ic_profile"
        android:contentDescription="@string/profile_description"
        android:title="@string/profile_title" />

</menu>
