<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:liftOnScroll="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/profile_title" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <quickbeer.android.ui.view.GroupItem
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:position="ONLY">

            <quickbeer.android.ui.view.Button
                android:id="@+id/login_button"
                style="@style/AppTheme.Button.Primary"
                android:layout_margin="@dimen/spacing_xl"
                android:text="@string/login_button_label" />

        </quickbeer.android.ui.view.GroupItem>

        <quickbeer.android.ui.view.GroupLink
            android:id="@+id/link_play_store"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:applyTopMargin="false"
            app:icon="@drawable/ic_noun_play_store"
            app:label="@string/about_google_play"
            app:position="ONLY" />

        <quickbeer.android.ui.view.GroupLink
            android:id="@+id/link_privacy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:applyTopMargin="false"
            app:icon="@drawable/ic_noun_privacy"
            app:label="@string/about_privacy_policy"
            app:position="FIRST" />

        <quickbeer.android.ui.view.GroupLink
            android:id="@+id/link_source"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:applyTopMargin="false"
            app:icon="@drawable/ic_noun_source_code"
            app:label="@string/about_source_code"
            app:position="MIDDLE" />

        <quickbeer.android.ui.view.GroupLink
            android:id="@+id/link_license"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_noun_section"
            app:label="@string/about_quickbeer_license"
            app:position="MIDDLE" />

        <quickbeer.android.ui.view.GroupLink
            android:id="@+id/link_open_source"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_copyleft"
            app:label="@string/about_open_source_licenses"
            app:position="MIDDLE" />

        <quickbeer.android.ui.view.GroupLink
            android:id="@+id/link_graphics_assets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_noun_icon"
            app:label="@string/about_graphic_asset_licenses"
            app:position="LAST" />

        <TextView
            android:id="@+id/about_version"
            style="@style/DetailsDescription"
            android:layout_width="match_parent"
            android:layout_margin="@dimen/spacing_l"
            android:text="@string/about_version"
            android:textAlignment="center" />

        <TextView
            style="@style/DetailsDescription"
            android:layout_width="match_parent"
            android:layout_margin="@dimen/spacing_l"
            android:text="@string/about_description"
            android:textAlignment="center" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
