<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        style="@style/AppTheme.AppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:liftOnScroll="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/AppTheme.Toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_hero_arrow_left"
            app:title="@string/legal_title" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <quickbeer.android.ui.view.GroupLink
                android:id="@+id/link_license"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:label="@string/about_quickbeer_license"
                app:position="FIRST" />

            <quickbeer.android.ui.view.GroupLink
                android:id="@+id/link_privacy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:label="@string/about_privacy_policy"
                app:position="MIDDLE" />

            <quickbeer.android.ui.view.GroupLink
                android:id="@+id/link_open_source"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:label="@string/about_open_source_licenses"
                app:position="MIDDLE" />

            <quickbeer.android.ui.view.GroupLink
                android:id="@+id/link_graphics_assets"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:label="@string/about_graphic_asset_licenses"
                app:position="LAST" />

            <quickbeer.android.ui.view.GroupLink
                android:id="@+id/link_source"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:applyTopMargin="false"
                app:label="@string/about_source_code"
                app:position="ONLY"
                app:type="EXTERNAL" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
