<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        style="@style/AppTheme.AppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:liftOnScroll="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/AppTheme.Toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/discover_title" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <quickbeer.android.ui.view.GroupLink
                android:id="@+id/discover_top_beers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:applyTopMargin="true"
                app:icon="@drawable/ic_hero_star"
                app:label="@string/discover_top_beers"
                app:position="FIRST" />

            <quickbeer.android.ui.view.GroupLink
                android:id="@+id/discover_countries"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:applyTopMargin="false"
                app:icon="@drawable/ic_hero_world"
                app:label="@string/discover_countries"
                app:position="MIDDLE" />

            <quickbeer.android.ui.view.GroupLink
                android:id="@+id/discover_styles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:applyTopMargin="false"
                app:icon="@drawable/ic_hero_beaker"
                app:label="@string/discover_styles"
                app:position="LAST" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
