<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:clipToPadding="false"
    android:paddingBottom="20dp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_view_margin"
        app:cardBackgroundColor="@color/gray_800"
        android:elevation="@dimen/card_view_elevation">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:clipChildren="false">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:src="@drawable/logo_quickbeer"/>

            <LinearLayout
                style="@style/DetailsRowLayout"
                android:layout_margin="5dp">

                <TextView
                    android:id="@+id/about_version"
                    android:text="@string/about_version"
                    android:paddingBottom="30dp"
                    style="@style/DetailsDescription" />

                <TextView
                    android:text="@string/about_description"
                    style="@style/DetailsDescription" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/about_spice_program"
                style="@style/DetailsRowLayout"
                android:gravity="start"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/logo_chilicorn"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="5dp"
                    android:text="QuickBeer is sponsored by the Futurice Open Source Program"
                    style="@style/DetailsDescription"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/about_iiro"
                style="@style/DetailsRowLayout"
                android:gravity="start"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/logo_iiro"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="5dp"
                    android:text="Original Android design by Iiro Isotalo"
                    style="@style/DetailsDescription"/>

            </LinearLayout>

            <include layout="@layout/beer_details_separator_horizontal" />

            <RelativeLayout
                android:id="@+id/about_google_play"
                android:clickable="true"
                style="@style/DetailsRowLayout">

                <TextView
                    style="@style/DetailsValue"
                    android:text="@string/about_google_play"/>

            </RelativeLayout>

            <include layout="@layout/beer_details_separator_horizontal" />

            <RelativeLayout
                android:id="@+id/about_source_row"
                android:clickable="true"
                style="@style/DetailsRowLayout">

                <TextView
                    style="@style/DetailsValue"
                    android:text="@string/about_source_code"/>

            </RelativeLayout>

            <include layout="@layout/beer_details_separator_horizontal" />

            <RelativeLayout
                android:id="@+id/about_application_license_row"
                android:clickable="true"
                style="@style/DetailsRowLayout">

                <TextView
                    style="@style/DetailsValue"
                    android:text="@string/about_quickbeer_license"/>

            </RelativeLayout>

            <include layout="@layout/beer_details_separator_horizontal" />

            <RelativeLayout
                android:id="@+id/about_library_licenses_row"
                android:clickable="true"
                style="@style/DetailsRowLayout">

                <TextView
                    style="@style/DetailsValue"
                    android:text="@string/about_open_source_licenses"/>

            </RelativeLayout>

            <include layout="@layout/beer_details_separator_horizontal" />

            <RelativeLayout
                android:id="@+id/about_assets_row"
                android:clickable="true"
                style="@style/DetailsRowLayout">

                <TextView
                    style="@style/DetailsValue"
                    android:text="@string/about_graphic_asset_licenses"/>

            </RelativeLayout>

            <include layout="@layout/beer_details_separator_horizontal" />

            <RelativeLayout
                android:id="@+id/about_privacy_policy_row"
                android:layout_marginBottom="5dp"
                android:clickable="true"
                style="@style/DetailsRowLayout">

                <TextView
                    style="@style/DetailsValue"
                    android:text="@string/about_privacy_policy"/>

            </RelativeLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</android.support.v4.widget.NestedScrollView>